[modify] '캐시의 지역성' 설명 수정

--- a/8주차.md
+++ b/8주차.md
@@ -119,7 +119,7 @@
 - 캐시의 지역성에 대해 설명하시오.
 
   <details>
-  A1) 기억 장치 내의 정보를 균일하게 액세스 하는 것이 아니라 한 순간에 특정부분을 집중적으로 참조하는 특성<br>
+  A1) 컴퓨터에서 발생하는 데이터나 명령어의 접근 패턴에 대한 특성을 의미한다. <br>
   A2) 자주 사용될 것 같은 데이터를 담을 때 사용하는 원리<br>
   시간적 지역성 : 사용되었던 데이터가 가까운 시일 내에 한번더 사용될 가능성이 큰 성질<br>
   공간적 지역성 : 사용되었던 데이터의 인접 데이터가 사용될 가능성이 큰 성질<br>
