[Update] 세그먼테이션 & 페이지 개념 추가

--- a/7주차.md
+++ b/7주차.md
@@ -16,6 +16,9 @@
   페이지 부재 현상이 많이 일어나면 성능이 떨어진다.
   
   이러한 기법들은 다중 프로그래밍 시스템에 여러 프로세스를 수용하기 위해 주기억장치를 동적 분할하는 메모리 관리 작업이 필요하기 때문이다.
+  
+  chatgpt 답변) 페이지는 가상 주소 공간을 고정된 크기의 페이지로 분할한다. 세그먼테이션은 가상 주소 공간을 논리적인 단위인 세그먼트로 분할한다.
+  
   </details>
 - 내부 단편화와 외부 단편화에 대해 설명하세요.
   <details>
