--- a/19주차.md
+++ b/19주차.md
@@ -1,217 +1,175 @@
 
 ### 공부 주제(복습 + 추가)
 
-- 데드락
-- IPC
-- 페이징 & 세그멘테이션
-- 파일 시스템
+- OSI 7 Layer
+- 3 way - 4 way handshake
+- 혼잡제어 & 흐름제어
+- UDP
+- 대칭키 & 공개키
 
 
 ## 질문
 
-### 데드락
+### OSI 7 Layer
 
-- **왜 현대 OS는 Deadlock을 처리하지 않을까요?**
-
-  <details>
-  1. 빈번히 발생하는 이벤트가 아니기 때문에 미연에 방지하기 위해 훨씬 더 많은 오버헤드를 들이는것이 비효율적이라고 판단함.<br>
-  2. 현대 시스템의 복잡성으로 인해 교착 상태를 완전히 방지하는 것은 불가능<br>
-  3. 만약 시스템에서 deadlock이 발생한 경우 시스템이 비정상적으로 작동한것을 사람이 느낀후 직적 process를 죽이는 방법으로 대처<br>
-  <br></details>
-
-- **Wait Free와 Lock Free를 비교해 주세요** 
+- **계층화 모듈화(OSI 7 Layer)의 이점은? <br>-> network layer와 data link layer을 설명하고, 차이점을 설명하세요 <br>-> 라우팅에 대해 아는가?**
 
   <details>
-  Wait-free와 Lock-free는 모두 멀티스레딩 환경에서 공유 자원에 대한 동시 접근을 처리하는 기술<br>
-  Wait-free는 모든 스레드가 동시에 진행될 수 있는 것에 비해,<br>
-  Lock-free는 일부 스레드가 블로킹될 가능성이 있지만, 구현이 더 쉽고 성능이 높은 경우가 많음. Lock-free에 wait-free가 포함됨.<br>
-  참고 : https://peonyf.tistory.com/entry/OS-DeadLock%EB%8D%B0%EB%93%9C%EB%9D%BD
-  </details>
-
-- **세마포어,뮤텍스와 모니터 VS  Wait-Free, Lock-Free**
-
-  <details>
-  세마포어, 뮤텍스, 모니터와 Wait-Free, Lock-Free는 동시성 제어를 처리하는 다양한 동기화 방법입니다.<br>
-  세마포어, 뮤텍스, 그리고 모니터는 Lock을 사용하는 Locking 매커니즘<br>
-  Wait-Free, Lock-Free : Lock대신 CAS를 이용하여 동기화 하는 기술(atomic operation)<br>
-  </details>
-
-- **CAS란?(꼬리질문)**
-
-  <details>
-  동시성 제어에서 사용되는 원자적(atomic) 연산(실행 중에 다른 작업에 의해 방해받지 않고, 완전히 실행되거나 실행되지 않는 연산)<br>
-  gpt4의 말씀<br>
-  - CAS(Check-and-Swap) 연산은 주어진 주소의 값을 비교하고, 값이 일치하는 경우에만 새로운 값으로 교체하는 연산입니다. CAS 연산은 원자적(atomic) 연산으로, 동시에 여러 스레드에서 해당 연산을 수행해도 문제가 발생하지 않도록 보장됩니다.<br>
-  CAS 연산을 사용하는 과정에서 다른 스레드가 메인 메모리에 저장된 값을 변경하는 경우, 현재 스레드는 CAS 연산을 수행하기 전에 먼저 메인 메모리로부터 값을 가져옵니다. 이렇게 가져온 값과 현재 스레드에 저장된 값을 비교합니다.<br>
-  
-  만약, 현재 스레드에 저장된 값과 메인 메모리에 저장된 값이 일치한다면, CAS 연산이 성공하고 새로운 값을 저장하게 됩니다. 하지만, 다른 스레드가 메인 메모리에 저장된 값을 변경했다면, 현재 스레드에 저장된 값과 메인 메모리에 저장된 값은 일치하지 않을 것입니다. 이 경우 CAS 연산은 실패하고, 재시도를 수행해야 합니다.<br>
-  
-  재시도 시에는 현재 스레드가 메인 메모리로부터 값을 다시 가져온 후, CAS 연산을 다시 시도합니다. 이렇게 함으로써, 다른 스레드에 의해 메인 메모리에 저장된 값이 변경되었을 경우에도 CAS 연산이 올바르게 동작할 수 있습니다.<br>
-  
-  따라서, CAS 연산은 현재 스레드에 저장된 값과 메인 메모리에 저장된 값을 반복적으로 비교하고, 일치하지 않을 경우 재시도를 수행하여 올바른 값을 찾아내는 방식으로 작동합니다.<br>
-  참고 : https://steady-coding.tistory.com/568
-  </details>
-  
-
-------
-
-### IPC 
-
-- **Sharde Memory가 무엇이며, 사용할 때 유의해야 할 점에 대해 설명해주세요**
-
-  <details>
-  공유 메모리 방식은 IPC의 한 종류로, 여러 프로세스가 하나의 메모리 영역을 공유하여 데이터를 주고 받는 방식입니다.<br>
-  유의할 점<br>
-  - 동기화 : 공유 메모리에 접근하는 여러 프로세스들은 동시에 메모리에 접근할 수 있습니다. 이때, 각 프로세스가 데이터를 읽고 쓰는 시점이 일치하지 않을 수 있으므로, 데이터의 일관성을 유지하기 위해 동기화 작업이 필요합니다.<br><br>
-  - 권한 : 공유 메모리에 접근하는 프로세스들은 서로 다른 권한을 가질 수 있습니다. 따라서, 공유 메모리에 접근하는 프로세스들의 권한을 관리하고 제어하는 작업이 필요합니다.<br><br>
-  - 메모리 누수 : 공유 메모리를 사용할 때에는 메모리 누수에 대한 문제도 고려해야 합니다. 프로세스가 종료되더라도, 메모리에서 할당된 공간이 해제되지 않으면 메모리 누수가 발생합니다. 따라서, 공유 메모리를 사용할 때에는 메모리 할당과 해제를 꼭 확인해야 합니다.<br><br>
-  - 성능 : 공유 메모리 방식은 다른 IPC 방식에 비해 빠른 속도로 데이터를 전달할 수 있습니다. 하지만, 공유 메모리에 접근하는 작업이 많을수록 성능이 저하될 수 있으므로, 적절한 크기의 메모리를 할당하고 최소한으로 접근하는 것이 좋습니다.
-  </details>
-
-- **IPC 모델에 메세지 전달방식과 공유메모리방식이 있는데 각각의 장단점**
-
-  <details>
-  공유 메모리 모델의 경우, 커널의 관여 없이 메모리를 직접 사용하여 통신하기 때문에 통신 속도가 빠른 장점이 있지만, 별도의 동기화 과정이 필요하며 동시에 메모리 위치를 접근하는 문제가 발생할 수 있다는 단점이 있다. <br>
-  따라서 별도의 접근 제어 방법이 필요하며, 접근 제어 방식은 locking이나 세마포어(semaphore) 등이 있다.<br><br>
-  메시지 전달 모델의 경우, 커널을 통해서 데이터를 주고 받기 때문에 통신 속도가 느리다는 단점이 있지만, <br>
-  커널에서 데이터를 주고 받는 과정을 컨트롤할 수 있어 안전하며 send/receive 연산에 대해 커널이 동기화를 제공해준다는 장점이 있다.
-  </details>
-
-  
-
-------
-
-### 페이징 & 세그멘테이션
-
-
-- **메인 메모리란?**
-
-  <details>
-  - 메인 메모리는 CPU가 직접 접근할 수 있는 기억 장치<br>
-  - 프로세스가 실행되려면 프로그램이 메모리에 올라와야 함<br>
-  </details>
-
-- **프로그램을 메모리에서 실행하는 이유는?**
-
-  <details>
-  - 느리고 값싼 하드디스크는 제2저장장치로 사용<br>
-  - 비싸고 빠른 메모리는 작업공간으로 사용<br>
-  - 메모리를 계층적 구조로 만들어 작업속도를 올리고, 가격을 낮추는 방법을 “계층적 메모리 구조”라고 한다.<br>
-  - **프로그램을 메모리에서 실행하는 이유는 CPU가 바로 접근하여 처리할 수 있기 때문**<br>
-  - 디스크나 다른 저장장치에서 프로그램을 실행하면 CPU가 더 많은 시간을 소비하게 되어 작업이 더디게 처리됩니다.<br>
-  </details>
-
-- **MMU란?**
-
-  <details>
-  - MMU가 지원되지 않으면 물리 주소를 직접 접근해야 하기 때문에 부담<br>
-  - MMU는 사용자가 기억장소를 일일이 할당해야하는 불편 없애준다.<br>
-  - 프로세스의 크기가 실제 메모리의 용량을 초과해도 실행될 수 있게 해준다.<br>
-  - 가상주소를 물리주소로 변환<br>
-  </details>
-
-- **그렇다면 가상메모리의 용량이 실제 메모리보다 클 경우에는 어떤 일이 발생할까요?**
-
-  <details>
-  당장은 paging 시스템을 이용하여 실제 메모리에 필요한 부분만을 불러오기 때문에 큰 문제가 발생하지는 않지만, 디스크에서 메모리를 불러오는 과정에서 성능 저하가 일어 날 수 있다.
-  </details>
-
-- **페이지를 교체하는 과정에 대해서 설명해주세요. (알고리즘은 아무거나)**
-
-  <details>
-  - 프로세스가 실행될 때, CPU는 페이지 테이블(Page Table)을 참조하여 가상 주소(Virtual Address)를 물리 주소(Physical Address)로 변환한다.<br>
-  - 페이지 테이블은 각 페이지의 위치 정보를 가지고 있으며, 페이지 테이블 엔트리(PTE)는 해당 페이지가 메모리(RAM)에 존재하는지 여부를 표시한다.<br>
-  - CPU가 페이지 테이블을 참조할 때 해당 페이지가 메모리(RAM)에 없다면, 페이지 부재(Page Fault)가 발생.<br>
-  - 페이지 교체 알고리즘이 사용되어 메모리(RAM)에 필요한 페이지를 가져와 페이지 테이블의 PTE를 갱신<br>
-  </details>
-
-- **가상 주소를 실제 주소로 변환하는 과정은?**
-
-  <details>
-  - CPU에서 가상주소를 생성하고 MMU에게 전달한다.<br>
-  - MMU는 가상주소에서 페이지번호를 추출 (앞 비트)<br>
-  - 해당 페이지번호에 맞는 페이지 테이블을 탐색<br>
-  - 페이지테이블에서 물리 페이지 프레임 번호를 가져옴.<br>
-  - 가저울 물리페이지 프레임 + 가상주소의 오프셋 ⇒ 실제 주소<br>
-  - 메모리에 실제주소를 이용하여 데이터를 가져옴.<br>
-  </details>
-
-- **TLB에 대해 설명해주시고 TLB를 포함하여 다시 과정을 설명해주시겠어요?**
-
-  <details>
-  Translation Lookaside Buffer<br>
-  - 가상 메모리 주소를 물리적인 주소로 바로 변환하는 캐시<br>
-  ⇒ 캐시 히트에 대한 설명을 추가<br>
-  </details>
-
-- **TLBmiss와 PageFault의 차이?**
-
-  <details>
-  기본 TLB miss는 TLB엔 없지만 main memory에는 올라가 있는 상태를 의미한다. 그러니 page table을 가져와서 TLB에 저장하면 간단히 해결된다. 10 cycle정도면 TLB에 정보를 저장할 수 있다. 하드웨어나 소프트웨어의 통제를 받는데 하나의 exception이라고 보면 된다. <br><br>
-  하지만 Page Fault는 다르다. 요청한 page가 main memory에 없는 상태를 의미한다.
-  그러니 hard disk에서부터 불러와야 한다. 그러니 약 1,000,000 cycle정도 소요해야 TLB에 정보를 저장할 수 있다. 엄청난 차이가 있는데 이러니 page Fault를 최대한 발생시키지 않아야 한다.
-  </details>
-
-- **그러면 메모리 할당 방법중 하나인 버디 시스템에 대하여 설명해주시고, 과정을 설명해주세요.**
-
-  <details>
-  - 2의 제곱 값으로 메모리를 분할한다.<br>
-  - 메모리가 할당되면 적당한 크기의 메모리를 찾는다.<br>
-      1. 적당한 크기의 메모리를 발견하면 할당한다.<br>
-      2. 적당한 크기의 메모리 슬롯이 발견되지 않으면, 적당한 메모리 슬롯을 만들기를 시도한다.<br>
-          a. 요청된 메모리 크기보다 크게 절반씩 빈 메모리 슬롯을 자른다.<br>
-          b. 하한선에 도착하게 되면, 해당 메모리(하한선 크기의 메모리)를 할당한다.<br>
-          c. 다시 첫 번째 단계로 돌아간다.(적당한 크기의 메모리를 찾기 위해서)<br>
-          d. 적당한 메모리 슬롯이 발견될 때까지, 이 과정을 반복한다.<br>
-  - 메모리가 해제되면<br>
-      1. 메모리 블록을 해제한다.<br>
-      2. 주변의 블록들을 살펴 본다 - 주변 블록들도 해제된 상태인가?<br>
-      3. 만약 그렇다면, 두 메모리 블록을 조합하고 다시 두 번째 단계로 돌아간다. 그리고 해제된 모든 메모리들이 상한선에 도달할 때까지 이 과정을 반복하거나, 해제되지 않은 주변 블록들을 마주칠 때까지 반복한다.
-  </details>
-
-------
-
-### 파일시스템
-
-
-- **파일시스템에서 순차접근에 대해 설명해주세요.**
-
-  <details>
-  가장 간단한 접근 방법으로, 대부분 연산은 read와 write <br>
-  현재 위치를 가리키는 포인터에서 시스템 콜이 발생할 경우 포인터를 앞으로 보내면서 read와 write를 진행. 뒤로 돌아갈 땐 지정한 offset만큼 되감기를 해야 한다. (테이프 모델 기반)<br>
-  </details>
-
-- **파일시스템에서 직접접근에 대하여 설명해주세요.**
-
-  <details>
-  특별한 순서없이, 빠르게 레코드를 read, write 가능<br>
-  대규모 정보를 접근할 때 유용하기 때문에 '데이터베이스'에 활용된다.<br>
-  </details>
-
-- **직접접근의 장단점은?**
-
-  <details>
-  <장점>
+  [계층화 모듈화(OSI 7 Layer)의 이점은?]<br>
+  1. 단순성과 이식성 <br>
+  2. 유지 보수 및 디버깅 용이성<br>
+  3. 기능적 확장성<br>
   <br>
-  파일의 임의 위치에 빠르게 액세스할 수 있으므로 파일을 읽고 쓰는 속도를 향상시킬 수 있다.<br><br>
-  
-  예를 들어, 비디오나 음악 파일 같은 대용량 파일에서는 파일의 일부만 읽어들이는 경우가 많기 때문에, 이러한 파일을 직접접근하는 것이 더 효율적이다.<br><br>
-  
-  <단점>
+  [network layer와 data link layer을 설명하고, 차이점을 설명하세요]<br>
+  네트워크 계층: 상이한 네트워크 사이의 라우팅 및 데이터 전송을 처리합니다. 이 계층에서 가장 중요한 프로토콜은 IP와 ICMP입니다. <br>
+  데이터 링크 계층: 동일한 네트워크에 있는 장치 간의 통신을 처리합니다. 계층 3을 우편물의 주소로 생각하며 계층 2는 해당 주소에 있는 사무실 번호 또는 아파트 호수를 지시한다고 생각할 수 있습니다. 이 계층에서는 이더넷이 가장 많이 사용되는 프로토콜입니다.<br>
   <br>
-  파일의 임의 위치를 액세스하다가 잘못된 위치를 읽거나 쓰면 파일의 일부 또는 전체가 손상될 수 있습니다. 또한, 파일의 일부를 읽거나 쓸 때 데이터 일관성 문제가 발생할 수 있다.
+  [라우팅에 대해 아는가?]<br>
+  라우팅은 네트워크에서 데이터 패킷이 출발지에서 목적지로 전달되는 경로를 결정하는 과정이나 알고리즘을 말한다. 벨만포드, 다익스트라 알고리즘이 라우팅 알고리즘으로 사용된다.<br>
+  <br>
+  [게이트웨이란?]
+  네트워크를 다른 네트워크와 연결할 때 연결점이 되는 장치<br>
+  게이트웨이도 하나의 컴퓨터로 보통 라우터라고 함<br>
+  게이트웨이 주소가 설정되어 있지 않으면 같은 네트워크가 아닌 컴퓨터와 접속 할 수 없음
   </details>
 
-- **그렇다면 파일시스템의 Journaling에 대해 설명해주세요.**
+- **www.naver.com 에 접속하는 과정에 대해 설명해주세요.** 
 
   <details>
-  Journaling은 파일시스템에서 데이터 일관성을 유지하기 위한 방법 중 하나이다.<br>
-  Journaling은 파일시스템의 동작 중 발생하는 문제를 사전에 예방하기 위해 변경 내용을 로그에 기록하는 방식이다.<br>
+  1. 사용자가 브라우저에 URL을 입력<br>
+  2. DNS 서버에 도메인 네임으로 서버의 진짜 주소를 찾음<br>
+  3. IP 주소로 웹 서버에 TCP 3 handshake로 연결 수립<br>
+  4. 클라이언트는 웹 서버로 HTTP 요청 메세지를 보냄<br>
+  5. 웹 서버는 http 응답 메세지를 보냄<br>
+  6. 도착한 HTTP 응답 메세지는 웹 페이지 데이터로 변환되고, 웹 브라우저에 의해 출력<br>
   </details>
 
+- **subnet이란?**
 
+  <details>
+  IP 네트워크의 작은 부분으로, 주어진 IP를 더 작은 네트워크로 분할하는 기술적인 개념이다. 네트워크 관리와 주소 할당을 효율적으로 수행하고, 트래픽을 분리하거나 보안을 강화하기 위해 사용된다.<br>
+  서브넷은 IP 주소와 서브넷 마스크(Subnet Mask)를 사용하여 정의됩니다. 서브넷 마스크는 IP 주소의 네트워크 부분과 호스트 부분을 구분하는 역할을 합니다.
+  서브넷은 IP 주소 공간을 여러 개의 작은 네트워크로 분할하여, 네트워크 관리를 용이하게 합니다.
+  </details>
+
+- **TLD(Top-Level Domain)란?**
+
+  <details>
+  인터넷 도메인 이름 시스템에서 가장 높은 수준의 도메인을 나타내는 부분입니다.<br>
+  <br>
+  TLD는 도메인 이름의 의미를 나타내기도 하며, 도메인을 관리하는 조직, 지리적 위치, 용도 등에 따라 다양한 종류가 있다.<br>
+
+  일반적으로 TLD는 두 가지 유형으로 분류된다.<br>
+  1. Generic Top-Level Domains(gTLDs): 대부분의 일반적인 목적으로 사용되는 도메인을 나타낸다. 예를 들어, “.com”(상업적인 사이트), “.org”(비영리 단체), “.net”(네트워크), “.edu”(교육기관), “.gov”(정부기관) 등이 gTLDs의 예이다.<br>
+  2. Country Code Top-Level Domains(ccTLDs): 각 나라 또는 특정 지역을 나타내는 도메인을 나타낸다. 이러한 도메인은 국가 코드로 식별되며, 예를 들어 “.kr” (대한민국), “.uk”(영국), “.jp”(일본)등이 ccTLD의 예이다.<br>
+  </details>
+ 
+ - **IPv4 vs IPv6**
+
+      <details>
+      IPv4와 IPv6는 인터넷 프로토콜(IP) 주소 체계의 버전을 나타내는 것입니다.<br>
+    <br>
+      IPv4 (Internet Protocol version 4): <br>
+    <br>
+      - IPv4는 현재까지 가장 널리 사용되는 인터넷 프로토콜 버전입니다. <br>
+      - IPv4 주소는 32비트로 구성되어 있으며, 주소 공간은 약 43억개의 고유한 주소를 지원합니다. <br>
+      - IPv4 주소는 일반적으로 네 개의 10진수로 표시되며, 예를 들면 "192.168.0.1"과 같이 구성됩니다. <br>
+      - 그러나 인터넷의 성장과 장치들의 증가로 인해 IPv4 주소 공간의 고갈 문제가 발생했습니다. <br>
+    <br>
+      IPv6 (Internet Protocol version 6): <br>
+    <br>
+      - IPv6는 IPv4 주소 고갈 문제를 해결하기 위해 개발된 다음 세대 인터넷 프로토콜 버전입니다. <br>
+      - IPv6 주소는 128비트로 구성되어 있으며, 주소 공간은 약 340 십경개(약 3.4×10^38)의 고유한 주소를 지원합니다. <br>
+      - IPv6 주소는 16진수로 표시되며, 예를 들면 "2001:0db8:85a3:0000:0000:8a2e:0370:7334"과 같이 구성됩니다. <br>
+      - IPv6는 보안, 품질 보증(QoS), 자동 구성 등의 기능을 개선하고, 인터넷에 연결된 장치들의 수용량을 크게 확장합니다. <br>
+    <br>
+      IPv4와 IPv6는 서로 다른 주소 체계를 사용하기 때문에 호환성 문제가 발생할 수 있습니다. 따라서 현재는 IPv4와 IPv6를 함께 사용하고 있으며, 이를 "Dual Stack"이라고 부르는 방식으로 호환성을 유지하며 전환 작업이 진행되고 있습니다.
+      </details>
+      
+  - **세션 기반 인증과 토큰 기반 인증의 차이에 대해 얘기해주세요.**
+
+    <details>
+     세션 기반 인증은 클라이언트로부터 요청을 받으면 클라이언트의 상태 정보를 저장하므로 Stateful한 구조를 가지고,
+
+    토큰 기반 인증은 상태 정보를 서버에 저장하지 않으므로 Stateless한 구조를 가집니다.
+
+    ****💡 그렇다면 Stateful한 세션 기반의 인증 방식을 사용하게 된다면 어떠한 단점이 있을까요?****
+
+    1. 서버에 세션을 저장하기 때문에 사용자가 증가하면 서버에 과부하를 줄 수 있어 확장성이 낮습니다.
+    2. 해커가 훔친 쿠키를 이용해 요청을 보내면 서버는 올바른 사용자가 보낸 요청인지 알 수 없습니다. (세션 하이재킹 공격)
+
+    ****💡 그렇다면 세션 기반 인증과 토큰 기반 인증은 각각 어느 경우에 적합한가요?****
+
+    단일 도메인이라면 세션 기반 인증을 사용하고, 아니라면 토큰 기반 인증을 사용하는 것이 적합하다고 생각합니다.
+
+    왜? - 세션을 관리할 때 사용되는 쿠키는 단일 도메인 및 서브 도메인에서만 작동하도록 설계되어 있기 때문에 여러 도메인에서 관리하는 것은 어렵습니다. (CORS 문제)
+     </details>
+    
+   - **JWT가 무엇인가?**
+    <details>
+      JWT는 JSON 포맷을 이용하는 Claim 기반의 웹 토큰이며, 토큰 자체를 정보로 사용하는 Self-Contained 방식으로 정보를 안전하게 전달합니다.
+
+      JWT는 헤더(Header).내용(Payload).서명(Signature)로 구성되며 각 파트를 점(.)으로 구분합니다.
+
+      **헤더(Header) :**
+
+      토큰의 타입과 해시 암호화 알고리즘(방식지정)으로 이루어져 있다.
+
+      **내용(Payload) :**
+
+      토큰에 사용자가 담고자 하는 정보를 담는다. 내용에는 Claim이 담겨있고, JSON(Key/Value)형태의 한 쌍으로 이루어져 있다.
+
+      **서명(Signature) :**
+
+      토큰을 인코딩하거나 유효성 검증할 때 사용하는 고유한 암호화 코드이다. 헤더와 내용의 값을 인코딩한다.
+    </details>
+
+  - **Cookie가 무엇이고, 어디에 많이 사용되는가?**
+      <details>
+        쿠키(Cookie)는 웹 애플리케이션에서 클라이언트(일반적으로 웹 브라우저)에 저장되는 작은 데이터 조각입니다. 쿠키는 웹 사이트가 클라이언트의 컴퓨터에 정보를 저장하고 검색할 수 있는 방법을 제공하여 사용자와 상호작용하고 상태를 유지하는 데 사용됩니다. 주로 다음과 같은 목적으로 사용됩니다.<br>
+        세션 관리, 개인화, 사용자 추적 및 분석, 광고 타켓딩에 사용된다. 하지만, 쿠키는 보안과 개인 정보 보호 측면에서 주의해야 한다.
+      </details>
+      
+  - **TCP와 IP의 차이는?**
+      <details>
+        - IP주소 체계를 따른다. (네트워크 계층 layer 3) <br>
+        - TCP 특성을 활용해 송수신자의 논리적 연결을 생성하고, 신뢰성을 유지할 수 있도록 하겠다.(전송계층 layer4) <br>
+        - 정확히 말하자면 TCP가 올바른 통신을 하도록 도와주는 기능을 가지고 있으며, IP는 이러한 기능없이 오로지 TCP 패킷을 전송하는 일만을 한다.
+      </details>
+------
+
+### 3 way - 4 way handshake
+
+- **3 way-handshake와 4 way-handshake를 설명해주세요**
+
+  <details>
+  3 way-handshake란 TCP 네트워크에서 통신 하는 장치가 서로 연결이 잘 되었는지 확인하는 방법입니다. 송신자와 수신자는 총 3번에 걸쳐 데이터를 주고 받으며 통신이 가능한 상태인지 확인한다.<br>
+  <br>
+  4 way-handshake란 TCP 네트워크에서 통신하는 장치의 연결을 해제하는 방법이다. 송신자와 수신자는 총 4번에 걸쳐 데이터를 주고 받으며 연결을 끊는다.
+  </details>
   
+------
 
+### 혼잡제어 & 흐름제어 & UDP
+
+
+- **TCP 와 UDP을 설명해주세요 <br>-> TCP 기능인 흐름제어와 혼잡제어에 대해 설명해주세요 <br>-> 혼잡제어 기법 중 AIMD 방식이 있는데 설명하세요. 또한, 문제점도 설명해주세요.**
+
+  <details>
+  [TCP와 UDP에 대해 설명해주세요]<br>
+  TCP는 연속성보다 신뢰성 있는 전송이 중요할 때 사용되는 프로토콜이며, UDP는 TCP보다 빠르고 네트워크 부하가 적다는 장점이 있지만, 신뢰성 있는 데이터 전송을 보장하지는 않는다. 그렇기 때문에 신뢰성보다는 연속성이 중요한 실시간 스트리밍과 같은 서비스에 자주 사용된다.<br>
+  <br>
+  [TCP 기능인 흐름제어와 혼잡제어에 대해 설명해주세요] <br>
+  흐름제어는 송신측과 수신측의 데이터 처리 속도 차이를 해결하기 위한 기법, 흐름제어는 수신측이 packet을 지나치게 많이 받지 않도록 조절하는 것, 수신측은 송신측에게 현재 자신의 상태를 피드백 한다는 점<br>
+  혼잡제어는 송신측의 데이터 전달과 네트워크의 데이터 처리 속도 차이를 해결하기 위한 기법 <br>
+  <br>
+  [혼잡제어 기법 중 AIMD 방식이 있는데 설명하세요. 또한, 문제점도 설명해주세요]<br>
+    AIMD(Additive Increase / Multiplicative Decrease) <br>
+  - 처음에 패킷을 하나씩 보내고 이것이 문제없이 도착하면 window 크기(단위 시간 내에 보내는 패킷의 수)를 1씩 증가시켜가며 전송하는 방법 <br>
+  - 패킷 전송에 실패하거나 일정 시간을 넘으면 패킷의 보내는 속도를 절반으로 줄인다. <br>
+  - 공평한 방식으로, 여러 호스트가 한 네트워크를 공유하고 있으면 나중에 진입하는 쪽이 처음에는 불리하지만, 시간이 흐르면 평형상태로 수렴하게 되는 특징이 있다. <br>
+  - 문제점은 초기에 네트워크의 높은 대역폭을 사용하지 못하여 오랜 시간이 걸리게 되고, 네트워크가 혼잡해지는 상황을 미리 감지하지 못한다. 즉, 네트워크가 혼잡해지고 나서야 대역폭을 줄이는 방식이다.
+  </details>
 
 ------
 
