--- a/17주차.md
+++ b/17주차.md
@@ -184,10 +184,28 @@
 ### 데드락
 
 
-- 
+- **공유된 자원의 문제로 똑같이 Deadlock이 있는데 RaceCondition은 무슨 차이가 있나요?**
+          
+  <details>
+  Deadlock의 경우는 자원을 선점한 상태에서 서로의 자원을 얻기 위해 무한 대기상태에 빠져있는 것이지만, <br>
+  RaceCondition의 경우 공유된 자원때문에 생긴 문제이지만 공유 자원을 사용함으로서 생긴 문제이다. <br>
+  </details>
 
-
-- 
+- **대표적인 사례로 식사하는 철학자 문제가 있는데, 과정과 해결법을 설명해주세요**
+      <details>
+        <과정><br>
+        1. 일정 시간 생각을 한다.<br>
+        2. 왼쪽 포크가 사용 가능해질 때까지 대기한다. 만약 사용 가능하다면 집어든다.<br>
+        3. 오른쪽 포크가 사용 가능해질 때까지 대기한다. 만약 사용 가능하다면 집어든다.<br>
+        4. 양쪽의 포크를 잡으면 일정 시간만큼 식사를 한다.<br>
+        5. 오른쪽 포크를 내려놓는다.<br>
+        6. 왼쪽 포크를 내려놓는다.<br>
+        7. 다시 1번으로 돌아간다.<br>
+        <해결법><br>
+        1. 홀수 짝수를 매겨서 홀수면 왼쪽부터, 짝수면 오른쪽부터 포크를 잡는다.<br>
+        2. 타임아웃 설정<br>
+        3. 철학자 상태 구분<br>
+      </details>
 
 ------
 
