--- a/20주차.md
+++ b/20주차.md
@@ -207,7 +207,106 @@
 
     반면에 비동기는 요청한 작업의 완료 여부와는 관계없이 다음 작업을 처리하고, 요청한 작업이 완료되면, 이벤트나 콜백을 통해 결과값을 받아온다.
     </details>
+    
+-  HTTP와 HTTPS의 차이점은?
+    <details>
+        - 인터넷 상에서 정보를 암호화하는 SSL 프로토콜을 사용해 클라이언트와 서버가 자원을 주고 받을 때 쓰는 통신 규약
 
+        HTTPS는 텍스트를 암호화한다. (공개키 암호화 방식으로!)
+    </details>
+-  HTTP 응답코드에 대해 설명해 주세요.
+    <details>
+        HTTP의 응답 상태를 명시해주는 코드이다.
+    </details>
+-  401 (Unauthorized) 와 403 (Forbidden)은 의미적으로 어떤 차이가 있나요?
+    <details>
+        HTTP(하이퍼텍스트 전송 프로토콜) **`401 Unauthorized`** 응답 상태 코드는 요청된 리소스에 대한 유효한 인증 자격 증명이 없기 때문에 클라이언트 요청이 완료되지 않았음을 나타냅니다.
+
+        하이퍼텍스트 전송 프로토콜(HTTP)의 **`406 Not Acceptable`** 클라이언트 에러 응답 코드는 서버가 요청의 주도적인 [콘텐츠 협상](https://developer.mozilla.org/ko/docs/Web/HTTP/Content_negotiation) 헤더에 정의된 허용 가능한 값 목록과 일치하는 응답을 생성할 수 없으며, 서버가 기본 표현을 제공하지 않음을 나타냅니다.
+
+        따라서, 401 Unauthorized는 인증 실패를 나타내고, 403 Forbidden은 인가 실패를 나타냅니다.
+
+        - 그렇다면 인증과 인가의 차이점은??
+    </details>
+-  공개키와 대칭키에 대해 설명해 주세요.
+    <details>
+        대칭키 암호화는 하나의 키를 사용하여 암호화와 복호화를 동시에 수행하는 방식입니다. 즉, 암호화와 복호화에 동일한 비밀키를 사용하는 방식입니다
+
+        공개키 암호화는 두 개의 키를 사용하는 방식입니다. 하나는 공개키(public key)이고 다른 하나는 개인키(private key)입니다. 공개키는 누구나 알 수 있으며, 개인키는 오직 소유자만이 알고 있습니다. 이러한 방식은 송신자가 수신자의 공개키를 이용하여 암호화를 수행하고, 수신자는 자신의 개인키를 이용하여 복호화를 수행하는 방식입니다.
+    </details>
+-  SSL과 TLS의 차이는 무엇인가요?
+    <details>
+        SSL은 과거에 사용 되었던 HTTPS의 인증방식이었으나 치명적인 보안결함이 발견되어 현재는 TLS로 인증방식을 바꾸게 되었다.
+
+        가장 큰 차이점 중 하나는 암호화 방식입니다. SSL은 RC4를 사용하고, TLS는 RC4 대신 AES를 사용합니다. 또한, TLS는 SSL과 달리 더 강력한 암호화 기술을 제공합니다. SSL 3.0에서 발견된 POODLE 보안 결함 등의 문제도 TLS가 보완했습니다.
+
+        또한, SSL과 TLS는 버전별로 호환되지 않습니다. 즉, SSL 3.0 클라이언트는 TLS 1.0 서버와 통신할 수 없습니다. TLS는 SSL의 호환성 문제와 보안 결함 등을 개선하고 보다 강력한 암호화 기술을 제공하면서 SSL을 대체하였습니다. 현재 대부분의 웹 사이트에서는 TLS를 사용하여 데이터를 보호하고 있습니다.
+    </details>
+-  왜 HTTP는 TCP를 사용하나요?
+    <details>
+        HTTP는 기본적으로 Statess하기 때문에 어느 클라이언트가 어떤 순서로 데이터를 보냈는지 저장하지 않는다. 그러므로 데이터의 순서와 신뢰성을 보장해야 하기 때문에 TCP를 사용한다.
+
+        따라서, HTTP는 TCP를 사용하여 신뢰적이고 순서가 보장되며, 연결 지향성과 네트워크 혼잡 제어를 위한 기능을 활용합니다.
+    </details>
+- StateLess 하다는 것은? 무슨 의미인가요? Connectionless와의 무슨 차이점이있나요
+        <details>
+            Stateless는 서버나 클라이언트가 이전 상태를 유지하지 않는 것을 의미합니다. 각각의 요청이 독립적으로 처리되며, 이전 요청과 관련된 정보를 저장하지 않습니다. 이는 서버의 부담을 줄이고 확장성을 높이는 장점이 있습니다. Stateless 프로토콜의 대표적인 예로는 HTTP가 있습니다.
+
+            Connectionless는 데이터 패킷을 보내기 전에 먼저 연결을 설정하는 과정이 없이, 각각의 패킷이 독립적으로 처리되는 것을 의미합니다. 각각의 패킷은 독립적으로 처리되기 때문에 전송 순서가 바뀌거나 중복되어 전송될 수도 있습니다. Connectionless 프로토콜의 대표적인 예로는 UDP가 있습니다. UDP는 일부 데이터 패킷이 손실되더라도, 재전송을 요구하지 않고 그냥 무시합니다. 이러한 특성 때문에 UDP는 실시간 스트리밍 등에서 사용됩니다.
+        </details>
+-  그렇다면, 왜 HTTP/3 에서는 UDP(QUIC) 를 사용하나요? 위에서 언급한 UDP의 문제가 해결되었나요?
+    <details>
+        UDP는 신뢰성을 보장 못하는 것이 아니라 안한것이라고 할 수 있다. 어플리케이션 단에서 신뢰성을 추가할 수 있기 때문에 기존의 UDP통신에서 신뢰성을 추가하였다.
+    </details>
+-  로드 벨런서가 무엇인가요?
+    <details>
+        로드밸런서(load balancer)는 여러 대의 서버에게 부하를 분산시켜주는 기능을 하는 네트워크 장비입니다. 여러 대의 서버를 가지고 있는 경우, 로드밸런서를 통해 부하를 분산시킴으로써 서버의 안정성을 향상시킬 수 있습니다.
+    </details>
+-  L4 로드밸런서와, L7 로드밸런서의 차이에 대해 설명해 주세요.
+    <details>
+        L4 로드밸런서는 OSI 모델의 전송 계층에서 동작하며, IP 주소와 포트 번호를 기반으로 패킷을 로드밸런싱합니다. 이 방법은 TCP 및 UDP와 같은 로우레벨 프로토콜을 사용하는 애플리케이션에 적합합니다. L4 로드밸런서는 패킷을 전송할 서버를 선택하는 데 IP 주소와 포트 번호를 사용하므로 패킷의 내용을 고려하지 않습니다.
+
+        반면 L7 로드밸런서는 OSI 모델의 애플리케이션 계층에서 동작합니다. L7 로드밸런서는 HTTP 헤더, 쿠키, 세션 ID 등과 같은 패킷의 내용을 기반으로 패킷을 로드밸런싱합니다. 이를 통해 애플리케이션 계층의 정보를 활용해 특정 서버로 연결할 수 있으며, 특정 사용자나 브라우저를 고유하게 식별할 수 있습니다. L7 로드밸런서는 SSL 인증서의 해석, 웹 애플리케이션 방화벽 기능 등 고급 기능을 제공할 수 있습니다.
+    </details>
+-  로드밸런서 알고리즘에 대해 설명해 주세요.
+    <details>
+        - 라운드 로빈(Round Robin) : CPU 스케줄링의 라운드 로빈 방식 활용
+        - Least Connections : 연결 개수가 가장 적은 서버 선택 (트래픽으로 인해 세션이 길어지는 경우 권장)
+        - Source : 사용자 IP를 해싱하여 분배 (특정 사용자가 항상 같은 서버로 연결되는 것 보장)
+    </details>
+    
+-  DNS 로드 벨런싱에 대해 설명해주세요
+    <details>
+        DNS를 이용한 로드밸런싱 방법은 DNS Round Robin 방식입니다. 이 방식은 DNS 서버에서 도메인 이름에 대한 여러 개의 IP 주소를 반환하도록 설정하여, 클라이언트에서 도메인 이름을 DNS 서버에 쿼리하면 여러 개의 IP 주소가 반환되고, 클라이언트는 이 중 하나의 IP 주소를 선택하여 접속합니다.
+
+        이 방식은 DNS 서버에서 여러 개의 IP 주소를 반환하는 방법으로 간단하지만, 모든 클라이언트가 균등하게 분산되지 않을 수 있으며, 각 서버의 상태를 고려하지 않습니다. 또한 DNS 캐싱이나 TTL (Time To Live) 등의 설정에 따라 트래픽이 특정 서버로 몰리는 경우가 발생할 수 있습니다. 따라서 실시간 트래픽 분산에는 한계가 있으며, 대규모 서비스에서는 로드밸런서를 사용하는 것이 일반적입니다.
+    </details>
+-  **Blocking/Non-blocking 의 차이점은?**
+    <details>
+        블럭/논블럭은 간단히 말해서 `호출된 함수`가 `호출한 함수`에게 제어권을 건네주는 유무의 차이라고 볼 수 있다.
+
+        함수 A, B가 있고, A 안에서 B를 호출했다고 가정해보자. 이때 호출한 함수는 A고, 호출된 함수는 B가 된다. 현재 B가 호출되면서 B는 자신의 일을 진행해야 한다. (제어권이 B에게 주어진 상황)
+    </details>
+-  **Synchronous/Asynchronous의 차이점은?**
+    <details>
+        동기/비동기는 일을 수행 중인 `동시성`에 주목하자
+
+        아까처럼 함수 A와 B라고 똑같이 생각했을 때, B의 수행 결과나 종료 상태를 A가 신경쓰고 있는 유무의 차이라고 생각하면 된다.
+    </details>
+-  함수 A, B, C가 순차적으로 실행되는 구조일 때 Sync/Blocking 과 Async/NonBlocking의 실행 흐름을 설명해주세요, 단 본 함수에선 함수 A가 끝나면 결과값을 바로 출력하고 B,C도 동일하게 출력합니다.
+    <details>
+        ***Sync/Blocking*** 
+
+        프로그램을 실행하면서 A함수를 실행할땐 본 프로그램을 더 이상 실행하지 않으며 A함수를 실행하고 반환값을 출력하고 B, C함수도 동일하게 수행
+
+        ***Async/NonBlocking***
+
+        프로그램을 실행하며 A함수를 실행하고 즉시 프로그램으로 돌아와서 이어서 실행 return한 아무 값이 없는 undefined를 출력 이후에도 B, C함수를 실행한 후 즉시 프로그램으로 돌아온 후 A함수가 실행이 마치면 콜백함수를 통해 A함수의 결과값을 받고, 이후에 B,C함수의 콜백함수를 받는다.
+
+        <확장 질문>
+
+        - 그러면 node.js 는 싱글스레드인데 어떻게 async/nonblocking을 구현 할 수 있었을까요?
+    </details>
 ### 정리 링크
 
 * 세정 : [20주차 질문 준비](https://setorylog.oopy.io/6f091e24-61ff-4437-8b48-95f5174628d0)
