--- a/21주차.md
+++ b/21주차.md
@@ -6,7 +6,6 @@
 - SQL vs NoSQL
 - 정규화(Normalization)
 - 이상(Anomaly)
-- 인덱스(해당 부분은 
 
 
 ## 질문
@@ -40,10 +39,10 @@
 - Replciation과 Clustering에 대해 설명해 주세요.
     <details>
     - 리플리케이션(Replciation)
-      - 여러 개의 DB를 권한에 따라 수직적인 구조(Master-Slave)로 구축하는 방식입니다.
-      - 비동기 방식으로 노드들 간의 데이터를 동기화합니다.
-      - 장점 : 비동기 방식으로 데이터가 동기화되어 지연 시간이 거의 없습니다.
-      - 단점 : 노드들 간의 데이터가 동기화되지 않아 일관성있는 데이터를 얻지 못할 수 있습니다.
+        - 여러 개의 DB를 권한에 따라 수직적인 구조(Master-Slave)로 구축하는 방식입니다.
+        - 비동기 방식으로 노드들 간의 데이터를 동기화합니다.
+        - 장점 : 비동기 방식으로 데이터가 동기화되어 지연 시간이 거의 없습니다.
+        - 단점 : 노드들 간의 데이터가 동기화되지 않아 일관성있는 데이터를 얻지 못할 수 있습니다.
       
     - 클러스터링(Clustering)
       - 여러 개의 DB를 수평적인 구조로 구축하여 Fail Over한 시스템을 구축하는 방식입니다.
@@ -55,15 +54,15 @@
 - 샤딩과 파티셔닝의 차이?
     <details>
     - 파티셔닝(Partitioning)
-      - 퍼포먼스(performance), 가용성(availability) 또는 정비용이성(maintainability)를 목적으로 당신의 논리적인 데이터 엘리먼트들을 다수의 엔티티(table)로 쪼개는 행위를 뜻하는 일반적인 용어이다.
-      - 수평 파티셔닝 : 데이터베이스를 샤딩하게 되면 기존에 하나로 구성될 스키마를 다수의 복제본으로 구성하고 각각의 샤드에 어떤 데이터가 저장될지를 샤드키를 기준으로 분리한다.
-      - 수직 파티셔닝 : 하나의 엔티티에 저장된 데이터들을 다수의 엔티티들로 분리하는것을 말한다.
+        - 퍼포먼스(performance), 가용성(availability) 또는 정비용이성(maintainability)를 목적으로 당신의 논리적인 데이터 엘리먼트들을 다수의 엔티티(table)로 쪼개는 행위를 뜻하는 일반적인 용어이다.
+        - 수평 파티셔닝 : 데이터베이스를 샤딩하게 되면 기존에 하나로 구성될 스키마를 다수의 복제본으로 구성하고 각각의 샤드에 어떤 데이터가 저장될지를 샤드키를 기준으로 분리한다.
+        - 수직 파티셔닝 : 하나의 엔티티에 저장된 데이터들을 다수의 엔티티들로 분리하는것을 말한다.<br>
     여기서 수평 파티셔닝이 샤딩과 동일. 파티셔닝은 퍼포먼스, 가용성, 정비용이성등의 목적을 위해 논리적인 엔티티들을 다른 물리적인 엔티티들로 나누는것을 의미하는 일반적인 용어이다. 수평 파티셔닝 또는 샤딩은 스키마 복제 후 샤드키를 기준으로 데이터를 나누는것을 말한다. 수직 파티셔닝은 스키마를 나누고 데이터가 따라 옮겨가는것을 말한다.
     </details>
 
 - 만약 본인이 DB를 분산해서 관리해야 한다면, 레플리케이션 방식과 샤딩 방식 중 어떤 것을 사용할 것 같나요?
     <details>
-    **요점은 레플리케이션 방식과 샤딩 방식의 장단점 설명 **
+    ** 요점은 레플리케이션 방식과 샤딩 방식의 장단점 설명 **<br>
     레플리케이션은 데이터의 가용성(하나의 노드가 실패하더라도 다른노드에서 데이터 액세스 가능)과 내구성(같은 데이터의 복사본이 다른 노드에도 존재)을 향상시키며, 
     읽기 성능(읽기 요청이 여러 노드에 분산될 수 있음)을 향상시키는 데 중점을 두고 있습니다. 
     
