--- a/22주차.md
+++ b/22주차.md
@@ -1,11 +1,10 @@
 ### 공부 주제 (복습 + 추가)
 
-- 키(Key) 정리
-- SQL - JOIN
-- SQL Injection
-- SQL vs NoSQL
-- 정규화(Normalization)
-- 이상(Anomaly)
+- 인덱스
+- 트랜잭션
+- 트랜잭션 격리 수준
+- 저장 프로시저
+- 레디스
 
 
 ## 질문
