--- a/15주차.md
+++ b/15주차.md
@@ -28,7 +28,7 @@
     - O(1) : 입력 크기에 관계없이 일정한 실행시간을 가지는 알고리즘
         - 일정 시간을 가져, 안정적인 성능을 가지느다.
     - O(n^2) : 입력 크기의 제곱에 비례하는 실행시간을 가지는 알고리즘
-    - 입력크기가 매우 작을 때에는 O(n^2)가 O(1) 보다 빠를 수 있지만, 일반적으로 O(1)이 더 빠르다.
+        - 입력크기가 매우 작을 때에는 O(n^2)가 O(1) 보다 빠를 수 있지만, 일반적으로 O(1)이 더 빠르다.
     </details>
 
 ### Array
@@ -36,11 +36,11 @@
 - **del 과 pop의 차이는 무엇인가?**
 
     <details>
-    - del과 pop은 지우고자 하는 리스트의 인덱스를 받아서 지우는 방식
-    - pop은 지워진 <인덱스의 값>을 반환하지만,
-    - del은 반환하지 않는다.
-    - 이 차이 때문에 미세하게 del이 pop 보다 수행속도가 더 빠르다.
-    - remove와 동일하게 pop과 del은 특정 인덱스를 삭제한 다음 리스트를 재조정 한다.
+    - del과 pop은 지우고자 하는 리스트의 인덱스를 받아서 지우는 방식<br>
+    - pop은 지워진 <인덱스의 값>을 반환하지만,<br>
+    - del은 반환하지 않는다.<br>
+    - 이 차이 때문에 미세하게 del이 pop 보다 수행속도가 더 빠르다.<br>
+    - remove와 동일하게 pop과 del은 특정 인덱스를 삭제한 다음 리스트를 재조정 한다.<br>
     - del이 가장 빠르고, pop과 remove는 비슷한 수행시간을 갖는다.
     </details>
 
