--- a/15주차.md
+++ b/15주차.md
@@ -25,9 +25,9 @@
 - **O(1)은 O(N^2) 보다 무조건적으로 빠른가요?**
 
     <details>
-    - O(1) : 입력 크기에 관계없이 일정한 실행시간을 가지는 알고리즘
-        - 일정 시간을 가져, 안정적인 성능을 가지느다.
-    - O(n^2) : 입력 크기의 제곱에 비례하는 실행시간을 가지는 알고리즘
+    - O(1) : 입력 크기에 관계없이 일정한 실행시간을 가지는 알고리즘<br>
+        - 일정 시간을 가져, 안정적인 성능을 가진다.<br><br>
+    - O(n^2) : 입력 크기의 제곱에 비례하는 실행시간을 가지는 알고리즘<br>
         - 입력크기가 매우 작을 때에는 O(n^2)가 O(1) 보다 빠를 수 있지만, 일반적으로 O(1)이 더 빠르다.
     </details>
 
@@ -47,13 +47,13 @@
 - **선형탐색 알고리즘과 이진 탐색 알고리즘의 차이에 대해 말해주세요**
 
     <details>
-    - 선형 탐색 알고리즘 (Linear Search)
-        - 리스트의 길이에 비례하는 시간 소요 : `O(n)`
-        - 최악의 경우 : 모든 원소를 다 비교해야 한다
-    - 이진 탐색 알고리즘 (Binary Serach)
-        - 탐색하려는 리스트가 이미 정렬되어 있는 경우에만 적용 가능
-        - 크기 순으로 정렬되어 있다는 성질을 이용
-        - 한 번 비교가 일어날 때마다 리스트를 반씩 줄임
+    - 선형 탐색 알고리즘 (Linear Search)<br>
+        - 리스트의 길이에 비례하는 시간 소요 : `O(n)`<br>
+        - 최악의 경우 : 모든 원소를 다 비교해야 한다<br><br>
+    - 이진 탐색 알고리즘 (Binary Serach)<br>
+        - 탐색하려는 리스트가 이미 정렬되어 있는 경우에만 적용 가능<br>
+        - 크기 순으로 정렬되어 있다는 성질을 이용<br>
+        - 한 번 비교가 일어날 때마다 리스트를 반씩 줄임<br>
         - `O(logn)`
     </details>
 
@@ -62,19 +62,19 @@
 - **Linked List란 무엇이며, 어떻게 작동하는지 설명해주세요.**
 
     <details>
-    - 구성 요소(Node)
-        - data
-        - Link (next)
-    - 데이터의 모음을 저장하는 자료구조 중 하나
-    - 각각의 데이터는 노드라고 불리는 객체로 표현되며, 이 노드는 데이터를 저장하는 데이터 필드와 다음 노드를 가리키는 포인터 필드로 구성
-    - 이러한 방식으로 노드들이 연결된 구조를 가지고 있으며, 이 노드는 순서대로 나열
-        - 첫번째 노드는 연결리스트의 head
-        - 마지막 노드는 연결리스트의 tail
-        - 중간에 새로운 노드를 삽입하거나, 노드를 삭제하거나, 검색하는 연산
-    - Linked List의 장점
-        - 삽입 삭제가 O(1)의 시간복잡도로 가능
-    - 단점
-        - 데이터를 검색하거나 특정 위치에 있는 데이터를 가져오는 데 O(n)의 시간복잡도가 필요하다
+    - 구성 요소(Node)<br>
+        - data<br>
+        - Link (next)<br>
+    - 데이터의 모음을 저장하는 자료구조 중 하나<br>
+    - 각각의 데이터는 노드라고 불리는 객체로 표현되며, 이 노드는 데이터를 저장하는 데이터 필드와 다음 노드를 가리키는 포인터 필드로 구성<br>
+    - 이러한 방식으로 노드들이 연결된 구조를 가지고 있으며, 이 노드는 순서대로 나열<br>
+        - 첫번째 노드는 연결리스트의 head<br>
+        - 마지막 노드는 연결리스트의 tail<br>
+        - 중간에 새로운 노드를 삽입하거나, 노드를 삭제하거나, 검색하는 연산<br>
+    - Linked List의 장점<br>
+        - 삽입 삭제가 O(1)의 시간복잡도로 가능<br>
+    - 단점<br>
+        - 데이터를 검색하거나 특정 위치에 있는 데이터를 가져오는 데 O(n)의 시간복잡도가 필요하다<br>
         - 데이터의 주소를 저장하므로, 배열보다 많은 메모리를 사용할 수 있다.
     </details>
 
