--- a/23주차.md
+++ b/23주차.md
@@ -52,7 +52,7 @@
     <details>
     <br>
     동기화 지원 여부와 null 값 허용 여부의 차이가 있습니다.
-    <br>
+    <br><br>
     해시 테이블(Hash Table)
     <br>
     병렬 처리를 할 때 (동기화를 고려해야 하는 상황) Thread-safe 하다.<br>
@@ -80,7 +80,7 @@
 - 레드-블랙 트리(Red-Black Tree)를 설명하고, 레드블랙트리의 조건들을 말하시오.
     <details>
     레드-블랙 트리는 자가 균형 이진 탐색 트리이다. <br>
-    레드-블랙 트리는 다음과 같은 조건들을 만족한다.
+    레드-블랙 트리는 다음과 같은 조건들을 만족한다.<br>
     1. 모든 노드는 빨간색 혹은 검은색이다.
     2. 루트 노드는 검은색이다.
     3. 모든 리프 노드(NIL)들은 검은색이다. (NIL : null leaf, 자료를 갖지 않고 트리의 끝을 나타내는 노드)
@@ -98,7 +98,7 @@
 
 - Tree, AVL Tree 등의 다른 BBST 가 있음에도, 왜 Red Black Tree가 많이 사용될까요?
     <details>
-    Red Black Tree
+    Red Black Tree<br>
     - 삽입, 삭제 작업 시 균형을 맞추기 위한 작업 횟수가 적다.
     - 각 노드당 색깔을 표현하는 데 단 1bit의 저장공간만 필요하다.
     - 언제 회전에 의해 균형을 잡아햐 하는지가 쉽게 판별된다.
@@ -114,7 +114,7 @@
     <details>
     [image]
     Selection sort는 정렬되어있을 시 비교연산만 하기 때문 O(n)의 시간복잡도를 가진다.<br>
-    ![image]([https://user-images.githubusercontent.com/70104259/221133480-7a3942d8-d8ea-44e0-b448-26aa5d389412.png](https://gmlwjd9405.github.io/images/algorithm-selection-sort/sort-time-complexity.png))
+    ![image](https://gmlwjd9405.github.io/images/algorithm-selection-sort/sort-time-complexity.png)
     출처:https://gmlwjd9405.github.io/2018/05/06/algorithm-selection-sort.html
     </details>
 
