--- a/23주차.md
+++ b/23주차.md
@@ -81,10 +81,10 @@
     <details>
     레드-블랙 트리는 자가 균형 이진 탐색 트리이다. <br>
     레드-블랙 트리는 다음과 같은 조건들을 만족한다.<br>
-    1. 모든 노드는 빨간색 혹은 검은색이다.
-    2. 루트 노드는 검은색이다.
-    3. 모든 리프 노드(NIL)들은 검은색이다. (NIL : null leaf, 자료를 갖지 않고 트리의 끝을 나타내는 노드)
-    4. 빨간색 노드의 자식은 검은색이다. == No Double Red(빨간색 노드가 연속으로 나올 수 없다)
+    1. 모든 노드는 빨간색 혹은 검은색이다.<br>
+    2. 루트 노드는 검은색이다.<br>
+    3. 모든 리프 노드(NIL)들은 검은색이다. (NIL : null leaf, 자료를 갖지 않고 트리의 끝을 나타내는 노드)<br>
+    4. 빨간색 노드의 자식은 검은색이다. == No Double Red(빨간색 노드가 연속으로 나올 수 없다)<br>
     5. 모든 리프 노드에서 Black Depth는 같다. == 리프노드에서 루트 노드까지 가는 경로에서 만나는 검은색 노드의 개수가 같다.
     </details>
 
@@ -99,10 +99,10 @@
 - Tree, AVL Tree 등의 다른 BBST 가 있음에도, 왜 Red Black Tree가 많이 사용될까요?
     <details>
     Red Black Tree<br>
-    - 삽입, 삭제 작업 시 균형을 맞추기 위한 작업 횟수가 적다.
-    - 각 노드당 색깔을 표현하는 데 단 1bit의 저장공간만 필요하다.
-    - 언제 회전에 의해 균형을 잡아햐 하는지가 쉽게 판별된다.
-    - 이진 탐색 트리의 함수를 거의 그대로 사용한다.
+    - 삽입, 삭제 작업 시 균형을 맞추기 위한 작업 횟수가 적다.<br>
+    - 각 노드당 색깔을 표현하는 데 단 1bit의 저장공간만 필요하다.<br>
+    - 언제 회전에 의해 균형을 잡아햐 하는지가 쉽게 판별된다.<br>
+    - 이진 탐색 트리의 함수를 거의 그대로 사용한다.<br>
 
 
 - Bubble, Selection, Insertion Sort의 속도를 비교해 주세요.
@@ -114,7 +114,8 @@
     <details>
     [image]
     Selection sort는 정렬되어있을 시 비교연산만 하기 때문 O(n)의 시간복잡도를 가진다.<br>
-    ![image](https://gmlwjd9405.github.io/images/algorithm-selection-sort/sort-time-complexity.png)
+    ![image](https://github.com/CSstudy-SS/CS/assets/70104259/bcd4383c-8341-4dba-92c6-d9e19f0bc8ef)
+
     출처:https://gmlwjd9405.github.io/2018/05/06/algorithm-selection-sort.html
     </details>
 
