--- a/23주차.md
+++ b/23주차.md
@@ -99,24 +99,23 @@
 - Tree, AVL Tree 등의 다른 BBST 가 있음에도, 왜 Red Black Tree가 많이 사용될까요?
     <details>
     Red Black Tree<br>
-    - 삽입, 삭제 작업 시 균형을 맞추기 위한 작업 횟수가 적다.<br>
-    - 각 노드당 색깔을 표현하는 데 단 1bit의 저장공간만 필요하다.<br>
-    - 언제 회전에 의해 균형을 잡아햐 하는지가 쉽게 판별된다.<br>
-    - 이진 탐색 트리의 함수를 거의 그대로 사용한다.<br>
+        - 삽입, 삭제 작업 시 균형을 맞추기 위한 작업 횟수가 적다.<br>
+        - 각 노드당 색깔을 표현하는 데 단 1bit의 저장공간만 필요하다.<br>
+        - 언제 회전에 의해 균형을 잡아햐 하는지가 쉽게 판별된다.<br>
+        - 이진 탐색 트리의 함수를 거의 그대로 사용한다.<br>
+    </details>
 
 
 - Bubble, Selection, Insertion Sort의 속도를 비교해 주세요.
     <details>
-    시간복잡도는 모두 O(n^2)
+        시간복잡도는 모두 O(n^2)
     </details>
   
 - 값이 거의 정렬되어 있거나, 아예 정렬되어 있다면, 위 세 알고리즘의 성능 비교 결과는 달라질까요?
     <details>
-    [image]
-    Selection sort는 정렬되어있을 시 비교연산만 하기 때문 O(n)의 시간복잡도를 가진다.<br>
-    ![image](https://github.com/CSstudy-SS/CS/assets/70104259/bcd4383c-8341-4dba-92c6-d9e19f0bc8ef)
-
-    출처:https://gmlwjd9405.github.io/2018/05/06/algorithm-selection-sort.html
+        Selection sort는 정렬되어있을 시 비교연산만 하기 때문 O(n)의 시간복잡도를 가진다.<br>
+        ![image](https://github.com/CSstudy-SS/CS/assets/70104259/bcd4383c-8341-4dba-92c6-d9e19f0bc8ef)
+        출처:https://gmlwjd9405.github.io/2018/05/06/algorithm-selection-sort.html
     </details>
 
 ### 정리 링크
