--- a/24주차.md
+++ b/24주차.md
@@ -20,21 +20,21 @@
 - GoF 디자인 패턴에 따른 분류 3가지를 말하고 각각을 설명하고 예시를 하나씩 말하시오.
 
     <details>
-   생성패턴
-   - 객체의 생성방식 결정
-   - 생성 패턴에 속하는 패턴들은 객체를 생성, 합성하는 방법이나 객체의 표현 방법을 시스템과 분리해줍니다.
-   - 생성 패턴은 시스템이 상속(inheritance) 보다 복합(composite) 방법을 사용하는 방향으로 진화되어 가면서 더 중요해지고 있습니다.
-   - 싱글톤, 빌더, 프로토타입, 팩토리 메소드 패턴 등
-<br>
-   구조패턴
-   - 객체간의 관계를 조직, 작은 클래스들을 상속과 합성을 이용하여 더 큰 클래스를 생성하는 방법을 제공하는 패턴
-   - 구조 패턴의 중요한 포인트는 인터페이스나 구현을 복합하는 것이 아니라 객체를 합성하는 방법을 제공한다는 것입니다. 
-   - 이는 컴파일 단계에서가 아닌 런타임 단계에서 복합 방법이나 대상을 변경할 수 있다는 점에서 유연성을 갖습니다.(구조패턴의 장점)
-   - Adapter, Proxy, Composite 등
-<br>
-   행위패턴
-   - 객체의 행위를 조직, 관리, 연합
-   - Iterator, Interpreter, Template Method, Command, Strategy 등
+   - 생성패턴
+       - 객체의 생성방식 결정
+       - 생성 패턴에 속하는 패턴들은 객체를 생성, 합성하는 방법이나 객체의 표현 방법을 시스템과 분리해줍니다.
+       - 생성 패턴은 시스템이 상속(inheritance) 보다 복합(composite) 방법을 사용하는 방향으로 진화되어 가면서 더 중요해지고 있습니다.
+       - 싱글톤, 빌더, 프로토타입, 팩토리 메소드 패턴 등
+
+   - 구조패턴
+       - 객체간의 관계를 조직, 작은 클래스들을 상속과 합성을 이용하여 더 큰 클래스를 생성하는 방법을 제공하는 패턴
+       - 구조 패턴의 중요한 포인트는 인터페이스나 구현을 복합하는 것이 아니라 객체를 합성하는 방법을 제공한다는 것입니다. 
+       - 이는 컴파일 단계에서가 아닌 런타임 단계에서 복합 방법이나 대상을 변경할 수 있다는 점에서 유연성을 갖습니다.(구조패턴의 장점)
+       - Adapter, Proxy, Composite 등
+
+   - 행위패턴
+       - 객체의 행위를 조직, 관리, 연합
+       - Iterator, Interpreter, Template Method, Command, Strategy 등
     </details>
 
 
@@ -83,43 +83,42 @@
 
 
 - Factory Method Pattern 팩토리 메소드 패턴이란?
-    <details>
+<details>
     - 여러 개의 서브 클래스를 가진 슈퍼 클래스가 있을 때 인풋에 따라 하나의 자식 클래스의 인스턴스를 리턴해주는 방식
     - 객체 생성 처리를 서브 클래스로 분리 해 처리하도록 캡슐화하는 패턴
-
-    </details>
+</details>
 
 - Factory Method Pattern 팩토리 메소드 패턴은 언제 많이 사용될까?
-    <details>
+<details>
     - 어떤 클래스가 자신이 생성해야 하는 객체의 클래스를 예측할 수 없을 때
     - 생성할 객체를 기술하는 책임을 자신의 서브클래스가 지정했으면 할 때
-    </details>
+</details>
 
 
 - Factory Method Pattern 팩토리 메소드 패턴의 장점은?
-    <details>
-  - 코드로부터 서브 클래스의 인스턴스화를 제거하여 서로간의 종속성을 낮추고 결합도를 느슨하게 하며 확장을 쉽게합니다.
-  - 클라이언트와 구현 객체들 사이에 추상화를 제공합니다. 
-    </details>
+<details>
+    - 코드로부터 서브 클래스의 인스턴스화를 제거하여 서로간의 종속성을 낮추고 결합도를 느슨하게 하며 확장을 쉽게합니다.
+    - 클라이언트와 구현 객체들 사이에 추상화를 제공합니다. 
+</details>
   
 - 옵저버 패턴이란?
-    <details>
-  - 한 객체의 상태 변화에 따라 다른 객체의 상태도 연동되도록 일대다 객체 의존 관계를 구성 하는 패턴
-  - 데이터의 변경이 발생했을 경우 상대 클래스나 객체에 의존하지 않으면서 데이터 변경을 통보하고자 할 때 유용하다.
-    </details>
+<details>
+    - 한 객체의 상태 변화에 따라 다른 객체의 상태도 연동되도록 일대다 객체 의존 관계를 구성 하는 패턴
+    - 데이터의 변경이 발생했을 경우 상대 클래스나 객체에 의존하지 않으면서 데이터 변경을 통보하고자 할 때 유용하다.
+</details>
     
 - 스트레티지 패턴(Strategy Pattern)이란?
-    <details>
-  - 어떤 동작을 하는 로직을 정의하고, 이것들을 하나로 묶어(캡슐화) 관리하는 패턴
-  - 행위를 클래스로 캡슐화해 동적으로 행위를 자유롭게 바꿀 수 있게 해주는 패턴
-    </details>
+<details>
+    - 어떤 동작을 하는 로직을 정의하고, 이것들을 하나로 묶어(캡슐화) 관리하는 패턴
+    - 행위를 클래스로 캡슐화해 동적으로 행위를 자유롭게 바꿀 수 있게 해주는 패턴
+</details>
     
 - 컴포사이트 패턴(Composite Pattern) 이란?
-    <details>
-  - 여러 개의 객체들로 구성된 복합 객체와 단일 객체를 클라이언트에서 구별 없이 다루게 해주는 패턴
-  - 즉, 전체-부분의 관계(Ex. Directory-File)를 갖는 객체들 사이의 관계를 정의할 때 유용하다.
-  - 또한 클라이언트는 전체와 부분을 구분하지 않고 동일한 인터페이스 를 사용할 수 있다.
-    </details>
+<details>
+    - 여러 개의 객체들로 구성된 복합 객체와 단일 객체를 클라이언트에서 구별 없이 다루게 해주는 패턴
+    - 즉, 전체-부분의 관계(Ex. Directory-File)를 갖는 객체들 사이의 관계를 정의할 때 유용하다.
+    - 또한 클라이언트는 전체와 부분을 구분하지 않고 동일한 인터페이스 를 사용할 수 있다.
+</details>
 
 
 ### 정리 링크
