--- a/25주차.md
+++ b/25주차.md
@@ -50,7 +50,7 @@
 - 클래스로더의 위임모델에 대해 설명하시오
 
     <details>
-    위임모델은 클래스로더들 사이에서 클래스를 찾는 순서를 정의하며, 부모 클래스로더에게 위임한다. <br>
+    위임모델은 클래스로더들 사이에서 클래스를 찾는 순서를 정의하며, 부모 클래스로더에게 위임한다. <br><br>
     최상위 클래스로더까지 위임된 후 해당 클래스가 존재하지 않을 경우 하위 클래스로더에게 요청을 넘긴다.<br>
     (중간에 해당 클래스를 찾으면 거기서 끝내는 JVM도 있고, 찾아도 최상위 클래스로더까지 올라가서 찾는 JVM도 존재)
 
