--- a/26주차.md
+++ b/26주차.md
@@ -10,8 +10,14 @@
 - Call by value와 Call by reference에 대해서 설명하세요
     <details>
       
-    - call by value : call by value 호출 방식은 함수 호출 시 전달되는 변수 값을 복사해서 함수 인자로 전달한다.
-    - call by reference :  함수 호출 시 인자로 전달되는 변수의 레퍼런스를 전달한다. 따라서, 함수 안에서 인자 값이 변경되면, Argument로 전달된 객체의 값도 변경된다. 
+    - call by value : 
+    call by value 호출 방식은 함수 호출 시 전달되는 변수 값을 복사해서 함수 인자로 전달한다.
+        - 장점 : 복사하여 처리하기 때문에 안전하다. 원래의 값이 보존된다.
+        - 단점 : 복사를 하기 때문에 메모리 사용량이 늘어난다.
+    - call by reference :
+    함수 호출 시 인자로 전달되는 변수의 레퍼런스를 전달한다. 따라서, 함수 안에서 인자 값이 변경되면, Argument로 전달된 객체의 값도 변경된다. 
+        - 장점 : 복사하지 않고 직접 참조를 하기에 빠르다.
+        - 단점 : 직접 참조를 하기에 원래 값이 영향을 받는다.
       
     </details>
 
@@ -29,6 +35,41 @@
       
     </details>
 
+- Java의 함수 호출 방식에 대해 설명하세요
+    <details>
+
+    변수를 조작했는데, 의도와 다르게 원본 값이 바뀌거나, 반대로 바뀌지 않은 경우가 있을 수 있다. 언어적 특성을 이해하는데 도움이 된다.
+    </details>
+
+- 그렇다면 파이썬은 Call by value일까요 ? Call by reference일까요?
+    <details>
+
+    - call by assignment 
+        - immutable object일 경우 call by value형식으로 핸들링
+        - mutable object일 경우 call by reference 형식으로 핸들링
+        - 파이썬의 함수 인자 호출 방식은 인자로 받는 객체의 자료형에 따라 다르다.
+    
+    </details>
+
+- new String() 과 리터럴 (””)의 차이에 대해 설명해주세요
+    <details>
+
+    - new String()은 new 키워드로 새로운 객체를 생성하기 때문에 Heap 메모리 영역에 저장되고,
+    - “” 는 Heap 안에 있는 String Constant Pool 영역에 저장된다.
+    
+    <img src = "static/img/week26_stringImg.png">
+    </details>
+
+- String 객체가 불변인 이유에 대해 아는대로 설명해주세요
+    <details>
+
+    1. 캐싱 기능에 의한 메모리 절약과 속도 향상
+        - Java에서 String 객체들은 Heap의 String Pool이라는 공간에 저장되는데, 참조하려는 문자열이 String Pool에 존재하는 경우 새로 생성하지 않고, Pool에 있는 객체를 사용하기 때문에 특정 문자열 값을 재사용하는 빈도가 높을 수록 상당한 성능향상을 기대할 수 있다.
+    2. Thread-safe
+        - String객체는 불변이기 때문에 여러 스레드에서 동시에 특정 String 객체를 참조하더라도 안전하다.
+    3. 보안 기능
+        - 중요한 데이터를 문자열로 다루는 경우, 강제로 해당 참조에 대한 문자열 값을 바꾸는 것이 불가능하기 때문에 보안에 유리하다.
+    </details>
 
 - String, StringBuffer, StringBuilder 클래스의 각각의 특징에 대해 설명하세요
 
@@ -51,6 +92,7 @@
         - StringBuffer는 Thread-Safe함 / StringBuilder는 Thread-safe하지 않음 (불가능)
 
     </details>
+
 
 - float a = 0.1 는 오류가 발생하는가?
 
@@ -127,5 +169,11 @@
         	
         }
 
+    </details>
+
+- 다운캐스팅에서 주의해야할 점
+    <details>
+
+    다운 캐스팅 특성에 대해 주의해야 할 이유는 에디터에서 컴파일 에러가 발생하기 않고 런타임 에러가 발생하는 위험성이 있기 때문
     </details>
 
