--- a/27주차.md
+++ b/27주차.md
@@ -249,6 +249,10 @@
 
 - 우선순위가 낮은 프로세스는 우선순위가 높은 프로세스가 계속 들어오면 영원히 스케줄러에 선택받지 못하게 된다. 즉 기아 상태(Starvation)가 된다. 기아상태를 해결할 방법을 알고 있는가?
     <details>
-    
+
     “에이징”이라는 기법을 이용하여 오래 대기하는 프로세스가 우선순위를 점진적으로 증가시켜주는 방법을 이용한다.
     </details>
+
+
+### 정리 링크
+- 박세정 : [27주차 정리링크](https://evening-november-9ec.notion.site/3-987626d0b05e4ac587fb747b22da403f?pvs=4)
