--- a/6주차.md
+++ b/6주차.md
@@ -12,13 +12,13 @@
   </details>
 - Critical Section (임계 영역) 이란 무엇인가요?
   <details>
-    Critical Section은 **동일한 자원에 접근하는 코드 영역** 을 의미한다.
+    Critical Section은 동일한 자원에 접근하는 코드 영역 을 의미한다.
   </details>
   
 - Race Condition이 발생하는 순간 3가지를 설명해주세요.
 
   <details>
-      1. 커널 작업을 수행하는 중 인터럽트 발생
+    1. 커널 작업을 수행하는 중 인터럽트 발생
     2. 프로세스가 시스템 콜을 하여 커널모드로 진입 할 때 컨텍스트 스위칭이 발생할 때
     3. 멀티 프로세서 환경에서 공유 메모리 내의 커널 데이터에 접근 할 때
   </details>
