--- a/6주차.md
+++ b/6주차.md
@@ -25,8 +25,8 @@
 
 - 임계영역이 발생하지 않도록 만족해야하는 조건
   <details>
-    - `상호 배제(Mutual exclution)` | 하나의 프로세스가 임계 영역에 들어가 있다면 다른 프로세스는 들어갈 수 없어야 한다.
-    - `진행(Progress)` | 임계 영역에 들어간 프로세스가 없는 상태에서, 들어가려 하는 프로세스가 여러개라면 어느 것이 들어갈지 결정해주어야 한다.
+    - `상호 배제(Mutual exclution)` | 하나의 프로세스가 임계 영역에 들어가 있다면 다른 프로세스는 들어갈 수 없어야 한다. <br>
+    - `진행(Progress)` | 임계 영역에 들어간 프로세스가 없는 상태에서, 들어가려 하는 프로세스가 여러개라면 어느 것이 들어갈지 결정해주어야 한다. <br>
     - `한정 대기(Bounded waiting)` | 다른 프로세스의 기아(Starvation)을 방지하기 위해, 한 번 임계 구역에 들어간 프로세스는 다음 번 임계 영역에 들어갈 때 제한을 두어야 한다.
   </details>
 
