--- a/6주차.md
+++ b/6주차.md
@@ -34,7 +34,7 @@
 
 - Semaphore 방식에 대해 설명해주세요.
     <details>
-    `**세마포어** : 멀티 프로그래밍 환경에서 공유 자원에 대한 접근을 제한하는 방법`
+    세마포어 : 멀티 프로그래밍 환경에서 공유 자원에 대한 접근을 제한하는 방법
     </details>
 
 - Semaphore의 동작 과정에 대해 설명해주세요.
