--- a/6주차.md
+++ b/6주차.md
@@ -39,9 +39,9 @@
 
 - Semaphore의 동작 과정에 대해 설명해주세요.
     <details>
-    1. 먼저 도착한 A가 P(S)를 실행하여, S를 0으로 만들고 임계구역에 들어감
-    2. 그 뒤에 도착한 B가 P(S)를 실행하지만 S가 0이므로 대기상태
-    3. A가 임계 구역 수행을 마치고 V(S)를 실행하면 S는 다시 1이 됨
+    1. 먼저 도착한 A가 P(S)를 실행하여, S를 0으로 만들고 임계구역에 들어감 <br>
+    2. 그 뒤에 도착한 B가 P(S)를 실행하지만 S가 0이므로 대기상태 <br>
+    3. A가 임계 구역 수행을 마치고 V(S)를 실행하면 S는 다시 1이 됨 <br>
     4. B는 이제 P(S)에서 while 문을 빠져나올 수 있고, 임계 구역으로 들어가 수행함
     </details>
 
