--- a/28주차.md
+++ b/28주차.md
@@ -26,7 +26,7 @@
   
       또한 concat()의 경우는 StringBuilder로 전환되지 않기에 성능최적화가 필요합니다.
 
-      참고) https://siyoon210.tistory.com/160
+  참고) https://siyoon210.tistory.com/160
   
     </details>
 
@@ -57,13 +57,12 @@
 
 - GC알고리즘에 대해 말하고 설명하시오.
     <details>
-        Reference Counting : <br>
-        해당 객체에 접근할 수 있는 방법의 개수를 세고, 해당 개수가 0이 되면 GC의 대상이 됨. 이 알고리즘은 순환참조의 문제가 발생 <br>
-        Mark And Sweep(Mark & Compact) : <br>
-        root space에서부터 해당 객체에 접근 가능한지를 기준으로 한다.
-        루트부터 그래프 순회를 통해 연결된 객체를 찾아내고, 연결이 끊어진 객체를 지우는 방식.
-        그 이후에는 Compaction을 통해 분산 되었던 메모리를 정리한다(필수가 아님)<br>
-        GC가 Stack의 모든 변수를 스캔하면서 힙에서 참조된 객체들을 마킹(Mark), 마킹되지 않는 객체를 힙에서 제거(Sweep)
+        - Reference Counting : 해당 객체에 접근할 수 있는 방법의 개수를 세고, 해당 개수가 0이 되면 GC의 대상이 됨. 이 알고리즘은 순환참조의 문제가 발생
+        - Mark And Sweep(Mark & Compact) : 
+            - root space에서부터 해당 객체에 접근 가능한지를 기준으로 한다. 
+            - 루트부터 그래프 순회를 통해 연결된 객체를 찾아내고, 연결이 끊어진 객체를 지우는 방식.
+            - 그 이후에는 Compaction을 통해 분산 되었던 메모리를 정리한다(필수가 아님)<br>
+            - GC가 Stack의 모든 변수를 스캔하면서 힙에서 참조된 객체들을 마킹(Mark), 마킹되지 않는 객체를 힙에서 제거(Sweep)
   
     </details>
 
@@ -79,10 +78,11 @@
 - JVM의 Heap 영역구성에 대해 말하시오.
 
     <details>
-        - young generation : 새롭게 생성한 객체들이 대부분 여기에 위치. 해당 영역에서 일어나는 GC를 Minor GC라고 한다.
-            - edn(새롭게 생성된 객체들이 할당), 
-            - Survival0, Survival 1(Minor GC로부터 살아남은 객체들이 존재하는 영역, 0또는 1 둘중 하나는 반드시 비어있어야한다.)
-        - old generation : Young영역에서 살아남은 객체가 여기로 복사. 
+        
+    - young generation : 새롭게 생성한 객체들이 대부분 여기에 위치. 해당 영역에서 일어나는 GC를 Minor GC라고 한다.
+        - edn(새롭게 생성된 객체들이 할당), 
+        - Survival0, Survival 1(Minor GC로부터 살아남은 객체들이 존재하는 영역, 0또는 1 둘중 하나는 반드시 비어있어야한다.)
+    - old generation : Young영역에서 살아남은 객체가 여기로 복사. 
 
     </details>
 
@@ -104,28 +104,39 @@
 
 - heap영역을 old, young 두가지 영역으로 나눈 이유는?
     <details>
+        
         통계적으로 대부분의 객체가 수명이 짧으므로 특정 부분만 탐색함으로써 GC의 성능을 높이기 위해 나누었다.
+  
         GC도 결국 비용이므로 메모리의 특정 부분만을 탐색하여 해제하면 효율적이기 때문에 Young Generation에서 최대한 처리하도록 나눴다고 합니다.
+  
     </details>
 
 - GC가 실행되는 과정을 말하시오.
     <details>
         
-        JVM의 Heap은 Young Generation, Old Generation으로 나뉘고, Young Generation은 다시 Eden, Servival 0, Servival 1 영역으로 나뉜다. Eden 영역이 꽉 차면 minor gc 가 실행되어 Mark And Sweep 알고리즘을 통해 참조가 되고 있는 객체만 Servival 0 또는 Servival 1 영역으로 옮긴다. 만약 여러 번 minor gc를 실행하고도 참조된 객체가 있다면 이 객체를 Servival 영역에서 Old Generation 영역으로 옮긴다. 시간이 지나서 Old Generation 영역이 꽉 차면 major gc를 실행하여 Mark And Sweep 알고리즘을 통해 필요 없는 메모리를 비운다.
+        JVM의 Heap은 Young Generation, Old Generation으로 나뉘고, Young Generation은 다시 Eden, Servival 0, Servival 1 영역으로 나뉜다.
+  
+      Eden 영역이 꽉 차면 minor gc 가 실행되어 Mark And Sweep 알고리즘을 통해 참조가 되고 있는 객체만 Servival 0 또는 Servival 1 영역으로 옮긴다.
+
+      만약 여러 번 minor gc를 실행하고도 참조된 객체가 있다면 이 객체를 Servival 영역에서 Old Generation 영역으로 옮긴다.
+
+      시간이 지나서 Old Generation 영역이 꽉 차면 major gc를 실행하여 Mark And Sweep 알고리즘을 통해 필요 없는 메모리를 비운다.
   
     </details>
 
 - GC의 종류에 대해 말하고, 차이점들을 말하시오.
     <details>
-        - Serial GC : 하나의 쓰레드로 GC를 실행시켜, STW(Stop The World) 시간이 오래 걸린다.
-        - Parallel GC : 여러개의 쓰레드로 GC를 실행시켜 STW 시간이 짧아지고 멀티 코어 환경에서 애플리케이션 처리 속도를 향상시키기 위해 사용된다. java 8에서 기본으로 사용되는 방식.
-        - CMS GC : Concurrent_Mark_Sweep의 줄임말로 STW를 최소화 하기위해 고안. 가비지 수집 작업을 애플리케이션 쓰레드와 동시에 수행해 stw를 최소화 시키지만, 메모리와 cpu를 많이 사용하고 compaction(메모리 파편화 해결)이 기본적으로 제공되지 않아 G1 GC가 등장하면서 대체.
-        - G1 GC : Garbage First의 줄임말로 Heap를 일정크기의 영역으로 나눠서 어떤 영역은 Young Generation, 어떤 영역은 Old Generation으로 활용. 런타임에 필요에 따라 영역별 개수를 튜닝. 이에 따라 stw를 최소화 할 수 있게 되어 Java 9 이상부터는 G1 GC를 기본 실행방식으로 사용.
+        
+    - Serial GC : 하나의 쓰레드로 GC를 실행시켜, STW(Stop The World) 시간이 오래 걸린다.
+    - Parallel GC : 여러개의 쓰레드로 GC를 실행시켜 STW 시간이 짧아지고 멀티 코어 환경에서 애플리케이션 처리 속도를 향상시키기 위해 사용된다. java 8에서 기본으로 사용되는 방식.
+    - CMS GC : Concurrent_Mark_Sweep의 줄임말로 STW를 최소화 하기위해 고안. 가비지 수집 작업을 애플리케이션 쓰레드와 동시에 수행해 stw를 최소화 시키지만, 메모리와 cpu를 많이 사용하고 compaction(메모리 파편화 해결)이 기본적으로 제공되지 않아 G1 GC가 등장하면서 대체.
+    - G1 GC : Garbage First의 줄임말로 Heap를 일정크기의 영역으로 나눠서 어떤 영역은 Young Generation, 어떤 영역은 Old Generation으로 활용. 런타임에 필요에 따라 영역별 개수를 튜닝. 이에 따라 stw를 최소화 할 수 있게 되어 Java 9 이상부터는 G1 GC를 기본 실행방식으로 사용.
   
     </details>
 
 - G1 GC의 장단점은?
     <details>
+        
     - 장점
         - 별도의 STW 없이도 여유 메모리 공간을 압축하는 기능을 제공한다. 또한, 전체 Old Generation 혹은 Young Generation 통째로 Compaction을 할 필요 없고, 해당 Generation의 일부분 Region에 대해서만 Compaction을 하면 된다.
         - Heap 크기가 클수록 잘 동작한다.
