--- a/28주차.md
+++ b/28주차.md
@@ -57,12 +57,13 @@
 
 - GC알고리즘에 대해 말하고 설명하시오.
     <details>
-        - Reference Counting : 해당 객체에 접근할 수 있는 방법의 개수를 세고, 해당 개수가 0이 되면 GC의 대상이 됨. 이 알고리즘은 순환참조의 문제가 발생
-        - Mark And Sweep(Mark & Compact) : 
-            - root space에서부터 해당 객체에 접근 가능한지를 기준으로 한다. 
-            - 루트부터 그래프 순회를 통해 연결된 객체를 찾아내고, 연결이 끊어진 객체를 지우는 방식.
-            - 그 이후에는 Compaction을 통해 분산 되었던 메모리를 정리한다(필수가 아님)<br>
-            - GC가 Stack의 모든 변수를 스캔하면서 힙에서 참조된 객체들을 마킹(Mark), 마킹되지 않는 객체를 힙에서 제거(Sweep)
+        
+  - Reference Counting : 해당 객체에 접근할 수 있는 방법의 개수를 세고, 해당 개수가 0이 되면 GC의 대상이 됨. 이 알고리즘은 순환참조의 문제가 발생
+  - Mark And Sweep(Mark & Compact) : 
+    - root space에서부터 해당 객체에 접근 가능한지를 기준으로 한다. 
+    - 루트부터 그래프 순회를 통해 연결된 객체를 찾아내고, 연결이 끊어진 객체를 지우는 방식.
+    - 그 이후에는 Compaction을 통해 분산 되었던 메모리를 정리한다(필수가 아님)
+    - GC가 Stack의 모든 변수를 스캔하면서 힙에서 참조된 객체들을 마킹(Mark), 마킹되지 않는 객체를 힙에서 제거(Sweep)
   
     </details>
 
@@ -157,15 +158,15 @@
     </details>
 
 - G1 GC의 동작 과정을 설명하라.
-<details>
+    <details>
+        
+        기본적으로 G1 GC는 Young-Only 단계와 Space Reclamation 단계를 반복하면서 수행하는 Cycle 구조로 진행된다.
     
-    기본적으로 G1 GC는 Young-Only 단계와 Space Reclamation 단계를 반복하면서 수행하는 Cycle 구조로 진행된다.
-
-    Young Only 단계는 Minor GC만 수행하다가 한정된 Old Generation 비율이 넘으면 Major GC가 수행된다.
-
-    그리고 Young Only 단계가 끝날 때까지 두 GC가 혼용된다.
-
-    Space Reclamation 단계는 Old 영역의 Garbage까지 수집하는 Minor GC 방식의 Mixed GC 방식이 수행된다.
-
-참고) https://steady-coding.tistory.com/590
-</details>
+        Young Only 단계는 Minor GC만 수행하다가 한정된 Old Generation 비율이 넘으면 Major GC가 수행된다.
+    
+        그리고 Young Only 단계가 끝날 때까지 두 GC가 혼용된다.
+    
+        Space Reclamation 단계는 Old 영역의 Garbage까지 수집하는 Minor GC 방식의 Mixed GC 방식이 수행된다.
+    
+    참고) https://steady-coding.tistory.com/590
+    </details>
