--- a/28주차.md
+++ b/28주차.md
@@ -11,9 +11,7 @@
 
 - JDK 1.5 이후에 String객체 관련해서 성능이 향상된 부분은?
     <details>
-      
       JDK 1.5 이후에 컴파일 단계에서 String 객체를 사용하더라도 StringBuilder로 컴파일 되도록 변경되었습니다.
-      
     </details>
 
 - 그렇다면 1. 한줄로 모두 선언한 경우 2. 여러줄로 선언한 경우 3. 반복문 안에서 선언한 경우 4. String의 concat() 메서드를 사용하여 선언한 경우 이 4가지 중 성능최적화가 필요하지 않은 경우는?
@@ -67,22 +65,21 @@
   
     </details>
     
-- GC의 대상이 되는 경우를 말하시오.
-    <details>
-        
-  1. 객체가 NULL인 경우 (ex. String str = null)
-  2. 블럭 실행 종료 후, 블럭 안에서 생성된 객체
-  3. 부모 객체가 NULL인 경우, 포함하는 자식 객체
+  - GC의 대상이 되는 경우를 말하시오.
   
-    </details>
-- JVM의 Heap 영역구성에 대해 말하시오.
     <details>
-        
+          1. 객체가 NULL인 경우 (ex. String str = null) <br>
+          2. 블럭 실행 종료 후, 블럭 안에서 생성된 객체 <br>
+          3. 부모 객체가 NULL인 경우, 포함하는 자식 객체
+    </details>
+    
+  - JVM의 Heap 영역구성에 대해 말하시오.
+
+    <details>
     - young generation : 새롭게 생성한 객체들이 대부분 여기에 위치. 해당 영역에서 일어나는 GC를 Minor GC라고 한다.
         - edn(새롭게 생성된 객체들이 할당), 
         - Survival0, Survival 1(Minor GC로부터 살아남은 객체들이 존재하는 영역, 0또는 1 둘중 하나는 반드시 비어있어야한다.)
     - old generation : Young영역에서 살아남은 객체가 여기로 복사. 
-
     </details>
 
 - java 8 Parallel GC 사용기준 age-bit가 몇이 되면 young에서 old로 넘겨주는 Promotion과정이 일어날까요?
