--- a/29주차.md
+++ b/29주차.md
@@ -73,55 +73,68 @@
 
 ## 직렬화(Serialization)
 - JAVA의 직렬화란?
-    
+  <details>
     자바 시스템 내부에서 사용되는 객체 또는 데이터를 외부의 자바 시스템에서도 사용할 수 있도록 바이트(byte) 형태로 데이터 변환하는 기술
     
     - 조건
         - 자바 기본 타입
         - Serializable 인터페이스 상속받은 객체
     - ObjectOutputStream 객체를 이용
+  </details>    
+
 - 역직렬화란?
+  <details>
     - 역직렬화
         - 바이트로 변환된 데이터를 다시 객체로 변환하는 기술
         - ObjectInputStream 객체를 이용
+  </details> 
 - JSON이 있는데 굳이 직렬화를 하는 이유는?
+  <details>
     1. 자바 시스템 개발에 최적화 되어 있다.
     2. 자바의 매우 많은 레퍼런스 타입을 제약 없이 외부에 내보낼 수 있다.
+  </details> 
 - transient 키워드는 무엇이며 언제 사용해야하나요?
-    
+  <details>
     `transient` 키워드는 멤버 변수를 직렬화에서 제외하도록 지정한다.
     
     직렬화되서는 안되는 변수에 해당 키워드를 사용한다.
+  </details> 
     
 - JAVA에서 Serializable인터페이스를 구현할 때 필요한 것이 무엇인가요?
-    
+  <details>
     serialVersionUID
+  </details> 
     
 - 직렬화에서 UID는 무엇인가요?
+  <details>
     - 객체를 구분하는데에도 사용된다
     - 직렬화 버전을 식별하는 데 사용된다.
     - 클래스 버전의 불일치가 있을 수 있다
+  </details> 
 - 자바에서 직렬화 할 때 예외가 발생하거나 주의해야 하는 상황은?
-    1. 멤버 변수를 추가할 때 (영향 없음 - 기본값으로 설정)
-    2. 멤버 변수가 삭제될 때 (영향 없음)
-    3. 멤버 변수의 이름이 바뀔 때 (영향 없음 - 값이 할당되지 않음)
-    4. 멤버 변수의 접근 제어자 변경 (영향 없음)
-    5. **멤버 변수의 타입이 바뀔 때 (영향 있음)**
-    6. 멤버 변수에 static 와 transient 추가 (영향 없음)
+  <details>
+        1. 멤버 변수를 추가할 때 (영향 없음 - 기본값으로 설정)<br>
+        2. 멤버 변수가 삭제될 때 (영향 없음)<br>
+        3. 멤버 변수의 이름이 바뀔 때 (영향 없음 - 값이 할당되지 않음)<br>
+        4. 멤버 변수의 접근 제어자 변경 (영향 없음)<br>
+        5. **멤버 변수의 타입이 바뀔 때 (영향 있음)**<br>
+        6. 멤버 변수에 static 와 transient 추가 (영향 없음)<br>
+  </details> 
 - ****InvalidClassException이란?****
+  <details>
     InvalidClassException 예외는 직렬화를 이용하다보면 흔히 접할 수 있는 오류이다. 이 예외는 아래 3가지 주요 원인으로 인해  Serialized 또는 Deserialized 할 수 없다는 것을 의미한다.
     
     1. 클래스의 SerialVersionUID 버전이 다른 경우
     2. 클래스에 다른 데이터 타입을 포함한 경우
     3. 기본 생성자가 없는 경우
+  </details> 
 - 직렬화의 단점은?
-    1. 직렬화의 용량은 크다
-    
-    직렬화는 객체에 저장된 데이터값 뿐만 아니라 타입 정보, 클래스 메타 정보를 가지고 있으므로 용량을 은근히 많이 차지한다. 그래서 같은 정보를 직렬화로 저장하느냐 JSON으로 저장하느냐는 파일 용량 크기가 거의 2배 이상 차이가 난다.
-    
-    따라서 DB, Cache 등에 외부에 저장할때, 장기간 동안 저장하는 정보는 직렬화를 지양해야 된다.
-    
-    2. 역직렬화의 위험성
-        
-        역직렬화 과정에서 호출되어 잠재적으로 위험한 동작을 수행하는 메서드를 **가젯(gadget)** 이라고 부르는데, 바이트 스트림을 역직렬화하는 ObjectInputStream의 ~~readObject()~~ 메서드를 호출하게 되면 객체 그래프가 역직렬화되어 classpath 안의 모든 타입의 객체를 만들어 내게 되는데, 해당 타입 객체안의 모든 코드를 수행할수 있게 되므로 나의 프로그램 코드 전체가 공격 범위에 들어가게 된다.
-        또는 객체를 직렬화하여 외부로 전송하는 과정에서 중간에 누가 가로채 파일 바이트 내용을 조작하여, 송신자가 역직렬화하는 과정에서 인스턴스에 위험한 값을 대입시켜 불변을 깨는 식으로의 공격도 가능하다. 왜냐하면 역직렬화는 생성자 없이 인스턴스화가 가능하기 때문에 **보이지 않는 생성자** 라고도 불리운다.
+  <details>
+        1. 직렬화의 용량은 크다
+        직렬화는 객체에 저장된 데이터값 뿐만 아니라 타입 정보, 클래스 메타 정보를 가지고 있으므로 용량을 은근히 많이 차지한다. 그래서 같은 정보를 직렬화로 저장하느냐 JSON으로 저장하느냐는 파일 용량 크기가 거의 2배 이상 차이가 난다.
+        따라서 DB, Cache 등에 외부에 저장할때, 장기간 동안 저장하는 정보는 직렬화를 지양해야 된다.
+      <br>
+        2. 역직렬화의 위험성
+        역직렬화 과정에서 호출되어 잠재적으로 위험한 동작을 수행하는 메서드를 **가젯(gadget)** 이라고 부르는데, 바이트 스트림을 역직렬화하는 ObjectInputStream의 ~~readObject()~~ 메서드를 호출하게 되면 객체 그래프가 역직렬화되어                classpath 안의 모든 타입의 객체를 만들어 내게 되는데, 해당 타입 객체안의 모든 코드를 수행할수 있게 되므로 나의 프로그램 코드 전체가 공격 범위에 들어가게 된다.
+        또는 객체를 직렬화하여 외부로 전송하는 과정에서 중간에 누가 가로채 파일 바이트 내용을 조작하여, 송신자가 역직렬화하는 과정에서 인스턴스에 위험한 값을 대입시켜 불변을 깨는 식으로의 공격도 가능하다. 왜냐하면 역직렬화는 생성자 없이           인스턴스화가 가능하기 때문에 **보이지 않는 생성자** 라고도 불리운다.
+  </details> 
